--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 MONGO_URL=mongodb://127.0.0.1:27017/taskManagement
 PORT = 8000
 SECRET = $uPeRM@N_123456
+EMAIL_USER = ataksuki@proton.me
+PASSWORD_USER = PROTON&ME$UPER
